<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
    android:layout_marginTop="@dimen/marginBase"
    android:src="@drawable/calculadora"
    android:layout_height="@dimen/tamanioImagen"
    android:layout_width="wrap_content">
    </ImageView>

    <LinearLayout
        android:layout_marginTop="@dimen/marginBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:gravity="center_horizontal"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/N1Label"
        android:textSize="@dimen/tamanioLetra"

        ></TextView>
        <EditText
            android:id="@+id/n1Txt"
            android:inputType="number"
            android:layout_weight="1"
            android:textSize="@dimen/tamanioLetra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></EditText>
   </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/marginBase2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <TextView
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/N2Label"
            android:textSize="@dimen/tamanioLetra"

            ></TextView>
        <EditText
            android:id="@+id/n2Txt"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/tamanioLetra"

            ></EditText>
    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/marginBase2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_weight="1"
                android:background="@color/colorSuma"
                android:textColor="@color/primary_light"
                android:layout_width="match_parent"
                android:text="@string/sumarTxt"
                android:textSize="@dimen/tamanioLetra"
                android:layout_height="@dimen/tamanioBtn"

                android:onClick="Sumar"
                ></Button>
            <Button
                android:layout_weight="1"
                android:background="@color/colorResta"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tamanioBtn"
                android:text="@string/restarTxt"
                android:textSize="@dimen/tamanioLetra"

                android:onClick="Restar"
                ></Button>
            </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/marginBase2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/tamanioBtn"
                android:layout_weight="1"
                android:background="@color/colorMulti"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tamanioLetra"
                android:text="@string/multiplicarTxt"

                android:onClick="Multiplicar"
                ></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/tamanioBtn"
                android:layout_weight="1"
                android:background="@color/colorDiv"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tamanioLetra"
                android:text="@string/dividirTxt"

                android:onClick="Dividir"
                ></Button>

        </LinearLayout>




</LinearLayout>